# innholdsoversikt

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  Makefile  README.md  bq_tabell_jobber.py  bygg_df.py  dataproduct_aggregated.md  dataproduct_timeseries.md  enonic_data_api.py  gcs_api.py  get_url.py  main.py  nais.yaml  parse_json.py  pyproject.toml  requirements.txt  schema_tabell.json  test_requirements.py
.github/: dependabot.yml
.github/workflows/: build-and-deploy.yaml  ci.yaml  prod.innholdsmengde_dashboard.yaml  validate-and-build.yaml
innholdsoversikt/: bq_tabell_jobber.py  enonic_data_api.py  gcs_api.py  main.py
requirements/: ci.txt  dev.in  dev.txt  main.in  main.txt  prod.txt
src/innholdsoversikt/: bq_tabell_jobber.py  bygg_df.py  enonic_data_api.py  gcs_api.py  get_url.py  main.py  parse_json.py
