[project]
name = "innholdsoversikt"
version = "0.1.0"
description = "cronjob for å samle oversikt over innhold på nav.no"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

dependencies = [
    "requests>=2.32.0",
    "pandas>=2.0.0,<2.3.0",
    "numpy>=1.24.0,<2.4.0",
    "tqdm",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "python-dotenv",
    "cryptography>=41.0.0"
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipython<9.0.0",  # Ensure Python 3.11 compatibility
    "black",
    "openpyxl",
    "mypy",
    "isort"
]

[project.urls]
"Homepage" = "https://github.com/navikt/innholdsoversikt"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "testing"]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths=["src/innholdsoversikt"]
sections=["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]